--- a/style.css
+++ b/style.css
@@ -13,16 +13,14 @@
   text-align: center;
 }
 
-button,
-input[type="submit"],
-input[type="reset"] {
-  background: none;
-  color: inherit;
+button {
   border: none;
-  padding: 0;
   font: inherit;
   cursor: pointer;
-  outline: inherit;
+}
+
+button:active {
+  transform: translateY(1px);
 }
 
 [class*="-btn"] {
