--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+  background-color: darkgrey;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .wrapper {
   display: grid;
   grid-gap: 10px;
@@ -43,6 +54,7 @@ button:active {
 }
 
 .result > .result-text {
+  font-family: "Orbitron", sans-serif;
   margin-left: auto;
   margin-right: 20px;
 }
