--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .wrapper {
   display: grid;
   grid-gap: 10px;
-  width: 400px;
+  width: 250px;
   background-color: grey;
   padding: 1em;
   border-radius: 1em;
@@ -43,7 +43,7 @@ button:active {
 }
 
 .result {
-  width: 430px;
+  width: 250px;
   height: 60px;
   background-color: black;
   border-radius: 1em;
@@ -51,6 +51,7 @@ button:active {
   color: white;
   display: flex;
   align-items: center;
+  padding: 0 1em;
 }
 
 .result > .result-text {
